[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spaghetti_kugel_utils"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
authors = [
  { name="Shlomo Kallner", email="shlomo.kallner@gmail.com" },
]
description = "The Utils Package of the Spaghetti Kugel Project."
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers"
]

[project.urls]
"Homepage" = "https://github.com/shlomo-Kallner/Spaghetti_Kugel_Python_Utilities"
"Repository" = "https://github.com/shlomo-Kallner/Spaghetti_Kugel_Python_Utilities"
"Bug Tracker" = "https://github.com/shlomo-Kallner/Spaghetti_Kugel_Python_Utilities/issues"
# "Documentation" = "https://readthedocs.org"

## CLI Script Entry-Points
# [project.scripts]
# spam-cli = "spam:main_cli"

## GUI Script Entry-Points
# [project.gui-scripts]
# spam-gui = "spam:main_gui"

## Library/Plugin Entry-Points
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["spaghetti_kugel.utils*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["spaghetti_kugel.utils.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # enable scanning PEP 420 namespaces (enabled by default)

[tool.setuptools.dynamic]
version = {attr = "spaghetti_kugel.utils.VERSION"}
readme = {file = ["README.md", "USAGE.md", "CHANGELOG.md", "LICENSE"]}
dependencies = {file = ["requirements/requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements/dev.txt"]}
docs = {file = ["requirements/docs.txt"]}
    