[metadata]
name = spaghetti_kugel_utils
version = attr: spaghetti_kugel.utils.VERSION
author = Shlomo Kallner
author_email = shlomo.kallner@gmail.com
description = My package description
long_description = file: README.md, CHANGELOG.rst, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
# console_scripts =
#     executable-name = spaghetti_kugel.module:function
utils = spaghetti_kugel.utils

[options.extras_require]
dev = 
    pytest
build =
    myst-parser

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*
    spaghetti_kugel.tests*

[options.exclude_package_data]
spaghetti_kugel.utils =
    .gitattributes
    .gitignore
    .readthedocs.yaml