[metadata]
name = spaghetti_kugel_utils
version = attr: spaghetti_kugel.utils.VERSION
author = Shlomo Kallner
author_email = shlomo.kallner@gmail.com
description = The Utils Package of the Spaghetti Kugel Project.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.10
    

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
# console_scripts =
#     executable-name = spaghetti_kugel.module:function
utils = spaghetti_kugel.utils

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*
    spaghetti_kugel.tests*

[options.exclude_package_data]
spaghetti_kugel.utils =
    .gitattributes
    .gitignore
    .readthedocs.yaml
    .gitlab-ci.yaml