
[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.10
    

# [options.package_data]
# * = *.txt, *.rst, *.md
# hello = *.msg

# [options.entry_points]
# # console_scripts =
# #     executable-name = spaghetti_kugel.module:function
# utils = spaghetti_kugel.utils

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*
    spaghetti_kugel.tests*

[options.exclude_package_data]
spaghetti_kugel.utils =
    .gitattributes
    .gitignore
    .readthedocs.yaml
    .gitlab-ci.yaml